[tool.isort]
profile = "black"

[tool.poetry]
name = "tsrc"
version = "2.4.0"
description = "Manage groups of git repositories"
authors = ["Dimitri Merejkowsky <dimitri@dmerej.info>"]
readme = "README.rst"
license = "BSD-3-Clause"
repository = "https://github.com/dmerejkowsky/tsrc"
documentation = "https://dmerejkowsky.github.io/tsrc"

[tool.poetry.urls]
Changelog = "https://dmerejkowsky.github.io/tsrc/changelog/"
Issues = "https://github.com/dmerejkowsky/tsrc/issues"

[tool.poetry.dependencies]
# Note: keep this in sync with .github/workflows/tests.yml
python = "^3.6.2"

attrs = "^19.3.0"
cli-ui = "^0.11.0"
colored_traceback = "^0.3.0"
"ruamel.yaml" = "^0.16.7"
schema = "^0.7.1"
tabulate = "^0.8.6"
unidecode = "^1.1.1"

[tool.poetry.dev-dependencies]
# Task runner
invoke = "^1.5.0"

# Tests
coverage = ">= 6.0b1"
pytest = "^6.2.1"
pytest-cov = "^2.10"
pytest-xdist = "^1.32.0"
# cached-property is required by pygit2 for old Pythons
cached-property = { version = "^1.5.2", python = "< 3.8" }
pygit2 = "^1.2.0"  # for GitSever test helpers
mock = "^3.0.5"

# Linters
black = { version = "21.6b0", python = ">=3.7" }
flake8 = "3.9.2"
flake8-bugbear = "^21.4.3"
flake8-comprehensions = "^3.4.0"
pep8-naming = "^0.11.1"
isort = "^5.7.0"
types-mock = "^0.1.1"
mypy = "0.900"

# Docs
mkdocs = "1.2.2"
mkdocs-material = "7.2.4"

# Deps scanning
safety = "^1.9.0"

[tool.poetry.scripts]
tsrc = "tsrc.cli.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
