[tool.isort]
profile = "black"

[tool.poetry]
name = "tsrc"
version = "3.0.0"
description = "Manage groups of git repositories"
authors = ["Dimitri Merejkowsky <dimitri@dmerej.info>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/dmerejkowsky/tsrc"
documentation = "https://dmerejkowsky.github.io/tsrc"

[tool.poetry.urls]
Changelog = "https://dmerejkowsky.github.io/tsrc/changelog/"
Issues = "https://github.com/dmerejkowsky/tsrc/issues"

[tool.poetry.dependencies]
# Note: keep this in sync with .github/workflows/tests.yml
python = "^3.8"

attrs = "^19.3.0"
cli-ui = "^0.11.0"
colored_traceback = "^0.3.0"
ruamel-yaml = "^0.18.5"
schema = "^0.7.1"
tabulate = "^0.8.6"
unidecode = "^1.1.1"

[tool.poetry.dev-dependencies]
# Task runner
invoke = "^2.2"

# Tests
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-xdist = "^3.5.0"
pygit2 = "^1.13"

# Linters
black = "^22.3"
flake8 = "3.9.2"
flake8-bugbear = "^21.4.3"
flake8-comprehensions = "^3.4.0"
pep8-naming = "^0.11.1"
isort = "^5.7.0"
types-mock = "^0.1.1"
mypy = "^1.7"

# Docs
mkdocs = "^1.5"
mkdocs-material = "^9.5"

[tool.poetry.scripts]
tsrc = "tsrc.cli.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
