[tool.isort]
profile = "black"

[tool.poetry]
name = "tsrc"
version = "3.0.1"
description = "Manage groups of git repositories"
authors = ["Dimitri Merejkowsky <dimitri@dmerej.info>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/your-tools/tsrc"
documentation = "https://your-tools.github.io/tsrc"

[tool.poetry.urls]
Changelog = "https://your-tools.github.io/tsrc/changelog/"
Issues = "https://github.com/your-tools/tsrc/issues"

[tool.poetry.dependencies]
# Note: keep this in sync with .github/workflows/tests.yml
python = "^3.8.1"

cli-ui = "^0.11.0"
colored_traceback = "^0.3.0"
ruamel-yaml = "^0.18.5"
schema = "^0.7.1"
mypy_extensions = "^1.0.0"

[tool.poetry.dev-dependencies]
# Task runner
invoke = "^2.2"

# Tests
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-xdist = "^3.5.0"
pygit2 = "^1.13"

# Linters
black = "^24.8"
flake8 = "^7.1.1"
flake8-bugbear = "^24.4.0"
flake8-comprehensions = "^3.15.0"
pep8-naming = "^0.14.1"
isort = "^5.13.2"
types-mock = "^0.1.5"
mypy = "^1.11.1"

# Docs
mkdocs = "^1.5"
mkdocs-material = "^9.5"

[tool.poetry.scripts]
tsrc = "tsrc.cli.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
