[metadata]
name = tsrc
version = 1.0.2
description = Manage multiple repositories
long_description = file: README.rst
url = https://github.com/TankerHQ/tsrc
author = Kontrol SAS

[options]
# Note: keep this in sync with .github/workflows/
python_requires = >=3.5
include_package_data = True
packages = find:
install_requires =
  attrs
  cli-ui >= 0.9.1
  colorama
  colored_traceback
  github3.py >= 1.0
  path.py
  pyparsing
  python-gitlab
  pyxdg
  requests
  ruamel.yaml
  schema
  tabulate
  unidecode

[options.extras_require]
dev =
  black
  codecov
  coverage
  pytest
  pytest-cov
  pytest-sugar
  pytest-xdist
  requests
  mock
  mypy == 0.730
  twine
  wheel
  flake8 == 3.7.8
  flake8-comprehensions == 1.4.1
  mkdocs == 1.0.4

[options.entry_points]
console_scripts =
  tsrc = tsrc.cli.main:main

[flake8]
exclude =
  build
  .venv
max-line-length = 100
max-complexity = 10
ignore = E203

